<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="introListener"
            type="com.example.reviewtraval.ui.intro.IntroListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#121212"
        tools:context=".ui.intro.IntroFagment">

        <ImageView
            android:id="@+id/imv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_intro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <Button
            android:id="@+id/intro_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_all_16dp"
            android:layout_marginEnd="@dimen/default_margin_all_16dp"
            android:background="@drawable/custom_btn_login"
            android:onClick="@{introListener::btnLogin}"
            android:text="@string/login"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/gl_intro" />

        <Button
            android:id="@+id/intro_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_all_16dp"
            android:layout_marginTop="@dimen/default_margin_all_16dp"
            android:layout_marginEnd="@dimen/default_margin_all_16dp"
            android:background="@drawable/custom_button_register"
            android:onClick="@{introListener::btnRegister}"
            android:text="@string/register"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/intro_btn_login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_all_16dp"
            android:onClick="@{introListener::btnForgotPassword}"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/mycolorPrimary"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/intro_btn_register" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>