<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="loginListern"
            type="com.example.reviewtraval.ui.login.LoginListener" />
        <variable
            name="loginViewModel"
            type="com.example.reviewtraval.ui.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.Login2Fragment">

        <!-- TODO: Update blank fragment layout -->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/login_gl"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"
            android:layout_height="0dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_lo_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_all_16dp"
            android:layout_marginEnd="@dimen/default_margin_all_16dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_gl">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{loginViewModel.username}"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_lo_password"
            app:layout_constraintTop_toBottomOf="@id/login_input_lo_username"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/default_margin_all_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/default_margin_all_16dp"
            android:layout_marginEnd="@dimen/default_margin_all_16dp"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_paswword"
                android:layout_width="match_parent"
                android:text="@{loginViewModel.password}"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/login_cb_save_pass"
            android:layout_marginTop="@dimen/default_margin_all_16dp"
            app:layout_constraintTop_toBottomOf="@id/login_input_lo_password"
            app:layout_constraintEnd_toEndOf="@id/login_input_lo_password"
            app:layout_constraintStart_toStartOf="@id/login_input_lo_password"
            android:text="@string/save_password"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            app:layout_constraintTop_toBottomOf="@id/login_cb_save_pass"
            android:layout_marginTop="@dimen/default_margin_all_16dp"
            android:layout_marginStart="@dimen/default_margin_all_16dp"
            android:layout_marginEnd="@dimen/default_margin_all_16dp"
            android:text="@string/login"
            android:onClick="@{loginListern::btnLogin}"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>