<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.example.reviewtraval.ui.register.RegisterViewModel" />
        <variable
            name="registerListener"
            type="com.example.reviewtraval.ui.register.RegisterListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.register.RegisterFragment">

        <!-- TODO: Update blank fragment layout -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15"
            android:layout_height="0dp"/>
        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/register_lo_username"
            app:layout_constraintTop_toTopOf="@id/gl"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:errorEnabled="true"
            android:layout_marginStart="@dimen/default_margin_all_16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginEnd="@dimen/default_margin_all_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_username"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:text="@{viewModel.registerModel.username}"
                android:maxLength="32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_lo_password"
            app:layout_constraintTop_toBottomOf="@id/register_lo_username"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:errorEnabled="true"
            android:layout_marginStart="@dimen/default_margin_all_16dp"
            android:layout_marginEnd="@dimen/default_margin_all_16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_password"
                android:hint="@string/password"
                android:maxLength="32"
                android:inputType="textPassword"
                android:maxLines="1"
                android:text="@{viewModel.registerModel.password}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_lo_first_name"
            app:layout_constraintTop_toBottomOf="@id/register_lo_password"
            android:layout_marginStart="@dimen/default_margin_all_16dp"
            android:layout_marginEnd="@dimen/default_margin_all_16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_first_name"
                android:hint="@string/first_name"
                android:inputType="text"
                android:maxLines="1"
                android:text= "@{viewModel.registerModel.firstname}"
                android:maxLength="32"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_lo_last_name"
            app:layout_constraintTop_toBottomOf="@id/register_lo_first_name"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/default_margin_all_16dp"
            android:layout_marginEnd="@dimen/default_margin_all_16dp"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_last_name"
                android:hint="@string/last_name"
                android:layout_width="match_parent"
                android:maxLength="32"
                android:text="@{viewModel.registerModel.lastname}"
                android:maxLines="1"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_lo_email"
            app:layout_constraintTop_toBottomOf="@id/register_lo_last_name"
            app:layout_constraintEnd_toStartOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="@dimen/default_margin_all_16dp"
            android:layout_marginEnd="@dimen/default_margin_all_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:errorEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_edit_email"
                android:hint="@string/email"
                android:maxLines="1"
                android:maxLength="32"
                android:text="@{viewModel.registerModel.email}"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn_login"
            app:layout_constraintTop_toBottomOf="@id/register_lo_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/StyleButton"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:layout_marginStart="@dimen/default_margin_all_16dp"
            android:layout_marginEnd="@dimen/default_margin_all_16dp"
            android:onClick="@{registerListener::btnLogin}"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>